apps/mirotalk/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirotalk
  labels:
    app: mirotalk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: mirotalk
