apps/mirotalk/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirotalk
  labels:
    app: mirotalk
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: mirotalk.duytran.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mirotalk
                port:
                  number: 80
